
[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "nn"
authors = [{name = "Chris Thompson", email = "chris.thompson@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
]
requires-python = ">=3.12"

[project.urls]
Home = "https://github.com/cbthompson1/HW4-Clustering"
